--- a/class/fpdf186/FAQ.htm
+++ b/class/fpdf186/FAQ.htm
@@ -53,7 +53,7 @@ potrà aiutarti:<br>
 (output started at script.php:X).<br>
 <br>
 Ciò significa che lo script.php genera qualche output alla riga X.
-Nel caso in cui tale messaggio non appaia, aggiungi all'inizio del tuo script la seguente linea:
+Nel caso in cui tale messaggio non appaia, SALVA all'inizio del tuo script la seguente linea:
 <div class="doc-source">
 <pre><code>ob_end_clean();</code></pre>
 </div>
