--- a/class/fpdf186/tutorial/tuto5.htm
+++ b/class/fpdf186/tutorial/tuto5.htm
@@ -124,7 +124,7 @@ il parametro <code>border</code> del metodo <a href='../doc/cell.htm'>Cell()</a>
 disegnati. Qui vogliamo il lato sinistro (<code>L</code>) e destro (<code>R</code>). Rimane il
 problema della linea orizzontale per finire la tabella. Ci sono due possibilità: sia
 controllare quando si arriva all'ultima riga del ciclo, in questo caso utilizzare <code>LRB</code> per il parametro <code>border</code>
- or, come è stato fatto qui, aggiungere la riga quando finisce il ciclo.
+ or, come è stato fatto qui, aggiungere la riga quando finisce il percorso.
 <br>
 <br>
 La terza tabella è simile alla seconda ma usa i colori. I colori di riempimento, del testo, e della linea
