--- a/class/libraries/fpdf186/changelog.htm
+++ b/class/libraries/fpdf186/changelog.htm
@@ -168,7 +168,7 @@ dd {margin:1em 0 1em 1em}
 </dd>
 <dt><strong>v1.11</strong> (2001-10-20)</dt>
 <dd>
-- PNG support doesn't require PHP4/zlib any more. Data are now put directly into PDF without any decompression/recompression stage.<br>
+- PNG support doesn't require_once PHP4/zlib any more. Data are now put directly into PDF without any decompression/recompression stage.<br>
 - Image insertion now works correctly even with magic_quotes_runtime option set to on.<br>
 </dd>
 <dt><strong>v1.1</strong> (2001-10-07)</dt>
